# bijecthash

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  aminclude_static.am  benchmark.cpp  benchmark_hash.cpp  boiteMoustache.py  configure  configure.ac  decile.py  fileReader.cpp  idVSrand.py  inthash.c  main.cpp  plot.py  plot_global.py  plot_hash.py  run_methods.sh  seq.py  sequences.fasta  var.py
config/: config.h.in  fix-timestamp.sh  git-release  git-version-gen  version  version.config.git-release  version.configure.ac
config/m4/: ax_c_cxx_enable_debug_option.m4  ax_code_statistics.m4  ax_debian_package.m4  ax_define_macro_with_key_value_args.m4  ax_external_included_cxx_library_detection.m4  ax_external_included_generic_library_check.m4  ax_external_included_library_declare_options.m4  ax_gcovr_code_coverage.m4  ax_git_versioning.m4  ax_package_infos.m4
coverage/: Makefile.am  Makefile.in
doc/: Doxyfile  Makefile  Makefile.am  Makefile.in  UTF8-fix.sty  doxygen.cfg.in  mainpage.dox.in  plugin_compilation.dox
extra/: Makefile.am  Makefile.in  boiteMoustache.py  decile.py  run_methods.sh
packaging/: Makefile.am  Makefile.in  control.in  libkmer-reader.pc.in  libkmer-transformers.pc.in  postinst.in  prerm.in
resources/: Makefile  Makefile.am  Makefile.in  example1.fa  example1.fq  example2.fa  example2.fq  seq.py
src/: Makefile  Makefile.am  Makefile.in  benchmark.cpp  bh_kmer_collector.cpp  bh_kmer_collector.hpp  bh_kmer_index.cpp  bh_kmer_index.hpp  bh_kmer_processor.cpp  bh_kmer_processor.hpp  biject_hash.cpp  bwt_transformer.cpp  bwt_transformer.hpp  cache_statistics.cpp  cache_statistics.hpp  canonical_transformer.cpp  canonical_transformer.hpp  circular_queue.hpp  common.hpp  composition_transformer.cpp  composition_transformer.hpp  exception.hpp  fileReader.cpp  fileReader.hpp  file_reader.cpp  file_reader.hpp  gab_transformer.cpp  gab_transformer.hpp  identity_transformer.cpp  identity_transformer.hpp  inthash.h  inthash_transformer.cpp  inthash_transformer.hpp  kmer_collector.cpp  kmer_collector.hpp  kmer_index.cpp  kmer_index.hpp  kmer_processor.cpp  kmer_processor.hpp  kmer_reader.hpp  (+26 more)
src/transformers/: Makefile.am  Makefile.in  kmer_transformers.hpp
src/transformers/basic/: Makefile.am  Makefile.in  canonical_transformer.cpp  canonical_transformer.hpp  composition_transformer.cpp  composition_transformer.hpp  identity_transformer.hpp  kmer_transformers_basic.hpp  kmer_transformers_basic_plugin.cpp  permutation_bit_transformer.hpp  permutation_transformer.cpp  permutation_transformer.hpp
src/transformers/extra/: Makefile.am  Makefile.in  bwt_transformer.hpp  gab_transformer.hpp  inthash.c  inthash_transformer.hpp  kmer_transformers_extra.hpp  kmer_transformers_extra_plugin.cpp  lyndon_transformer.hpp  minimizer_transformer.hpp
tests/: Makefile.am  Makefile.in  test_kmer_reader.cpp  test_lcp_stats.cpp
